argocd/apps/pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: postgres-db
  labels:
    app: pgadmin
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: pgadmin
